test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/null_ptr_array_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(1)
  ]
  =
  const int(0)
  ;
  return
  identifier(arr)
  [
  const int(0)
  ]
  ;
  }
